# agent

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  deny.toml  justfile  lefthook.yml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  gitleaks.yaml  snyk-scan.yaml
agent/: Cargo.toml  build.rs
agent/src/: bpf.rs  config.rs  domain_manager.rs  main.rs  telemetry.rs  utils.rs
agent/src/bpf/: events.rs  loader.rs  maps.rs
agent/src/config/: paths.rs  runtime.rs
agent/src/telemetry/: client.rs  models.rs  run.rs
agent/src/utils/: hash.rs
bpf/: prog.bpf.c
bpf/include/: common.h  dns.h  structs.h  xxh64.h
common/: Cargo.toml
common/src/: lib.rs
proto/: metrics.proto  metrics.rs
src/: domains.rs  init.rs  main.rs  maps.rs  metrics.rs  network.rs  server.rs  telemetry.rs  types.rs  xxh64.rs
