[package]
name = "network-monitor-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aya = { version = "0.13.1", features = ["async_tokio"] }
env_logger = "0.11.8"
log = "0.4.28"
pnet = "0.35.0"
prost = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
prost-build = "0.14.1"
